--- a/index.html
+++ b/index.html
@@ -1,60 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>MyPortfolio</title>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;500;600;700&family=Poppins:ital,wght@1,300&display=swap" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;500;600;700&family=Inter:wght@200;300;400;500;600&family=Poppins:ital,wght@1,300&display=swap" rel="stylesheet">
-        <script src="https://kit.fontawesome.com/86cc835e69.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hamburgers/1.2.1/hamburgers.min.css" integrity="sha512-+mlclc5Q/eHs49oIOCxnnENudJWuNqX5AogCiqRBgKnpoplPzETg2fkgBFVC6WYUVxYYljuxPNG8RE7yBy1K+g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-        <header>
-            <div class="navi container">
-                <div class="logo">
-                    <figure>
-                        <img src="assets/bw.png" alt="sasukeR">
-                        <figcaption>sasukeR</figcaption>
-                    </figure>
-                </div>
-                <nav class="panel">
-                    <a href="#">Home</a>
-                    <a href="/about-me.html">About</a>
-                    <a href="/projects.html">Portfolio</a>
-                    <a href="#">Contact Me</a>
-                </nav>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MyPortfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;500;600;700&family=Poppins:ital,wght@1,300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;500;600;700&family=Inter:wght@200;300;400;500;600&family=Poppins:ital,wght@1,300&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/86cc835e69.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <div class="navi container">
+            <div class="logo">
+                <figure>
+                    <img src="assets/bw.png" alt="sasukeR">
+                    <figcaption>sasukeR</figcaption>
+                </figure>
             </div>
-        </header>
-        <button class="menu-btn hamburger hamburger--spring" type="button">
-            <span class="hamburger-box">
-                <span class="hamburger-inner"></span>
-              </span>
-        </button>
-        <section class="front-page">
-            <div class="meet container">
-                <div class="hello">
-                    <h1 class="name-h1">Reinaldo Contreras</h1>
-                    <h1 class="hello-h1">Hello, I am a Frontend Developer</h1>
-                    <p>I’m a passionate web developer with 3 years of experience in creating attractive and high-performance web solutions in a responsible and efficient manner, with the goal of providing a unique and satisfying user experience. </p>
-                    <button type="button">Let’s talk with me</button>
-                </div>
-                <div class="avatar">
-                    <img src="assets/avatar-nobg.png" alt="avatar">
-                </div>
+            <nav class="panel">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">Contact Me</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <button class="menu-btn" type="button">
+        <i class="fa-solid fa-bars"></i>
+        <i class="fa-solid fa-xmark none"></i>
+    </button>
+    <section class="front-page">
+        <div class="meet container">
+            <div class="hello">
+                <h1 class="name-h1">Reinaldo Contreras</h1>
+                <h1 class="hello-h1">Hello, I am a Frontend Developer</h1>
+                <p>I’m a passionate web developer with 3 years of experience in creating attractive and high-performance web solutions in a responsible and efficient manner, with the goal of providing a unique and satisfying user experience. </p>
+                <button type="button">Let’s talk with me</button>
             </div>
-            <div class="social container">
-                <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="#"><i class="fa-brands fa-github"></i></a>
+            <div class="avatar">
+                <img src="assets/avatar-nobg.png" alt="avatar">
             </div>
-        </section>
+        </div>
+        <ul class="social">
+            <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-github"></i></a></li>
+        </ul>
+    </section>
         <main>
             <section class="about-me">
                 <h3>About Me</h3>
