--- a/index.html
+++ b/index.html
@@ -55,53 +55,54 @@
             <li><a href="#"><i class="fa-brands fa-github"></i></a></li>
         </ul>
     </section>
-        <main>
-            <section class="about-me">
-                <h3>About Me</h3>
-                <div>
-                    <p>Hi, my name is Reinaldo Contreras, and I am a passionate web developer originally from Venezuela, but currently living in Peru for the past 3 years. I specialize in web development and have experience using technologies such as <button class="info-btn" type="button">show more</button></p>
+    <main>
+        <section class="about-me">
+            <h3>About Me</h3>
+            <div>
+                <p>Hi, my name is Reinaldo Contreras, and I am a passionate web developer originally from Venezuela, but currently living in Peru for the past 3 years. I specialize in web development and have experience using technologies such as <button class="info-btn" type="button">show more</button></p>
+            </div>
+            <div class="more-info">
+                <div class="tools">
+                    <div class="tool-icon"><i class="fa-brands fa-square-js"></i></div>
+                    <div class="tool-icon"><i class="fa-brands fa-react"></i></div>
+                    <div class="tool-icon"><i class="fa-brands fa-node-js"></i></div>
+                    <div class="tool-icon"><i class="fa-brands fa-github"></i></div>
+                    <div class="tool-icon"><i class="fa-brands fa-figma"></i></div>
                 </div>
-                <div  class="more-info">
-                    <div class="tools">
-                        <div class="tool-icon"><i class="fa-brands fa-square-js"></i></div>
-                        <div class="tool-icon"><i class="fa-brands fa-react"></i></div>
-                        <div class="tool-icon"><i class="fa-brands fa-node-js"></i></div>
-                        <div class="tool-icon"><i class="fa-brands fa-github"></i></div>
-                        <div class="tool-icon"><i class="fa-brands fa-figma"></i></div>
-                    </div>
-                    <p>I love working on exciting and challenging projects, and I'm always looking for ways to improve my skills and knowledge. I'm a curious person, always learning and trying to stay up-to-date with the latest trends in web development.<br><br>
+                 <p>I love working on exciting and challenging projects, and I'm always looking for ways to improve my skills and knowledge. I'm a curious person, always learning and trying to stay up-to-date with the latest trends in web development.<br><br>
     
                         In addition to my technical skills, I'm also a responsible and committed person in my work, especially when it comes to working remotely. I enjoy working in teams and I believe that good communication is key to achieving success in any project.<br><br>
                         
-                        In my free time, I enjoy music, movies, and traveling to learn about new cultures and experiences. I'm excited to share my projects and knowledge in my portfolio, and I'm available to collaborate on interesting projects. If you want to know more about me or just want to chat, don't hesitate to get in touch!<button class="info-btn info-btn-inactive" type="button">show less</button></p>
+                        In my free time, I enjoy music, movies, and traveling to learn about new cultures and experiences. I'm excited to share my projects and knowledge in my portfolio, and I'm available to collaborate on interesting projects. If you want to know more about me or just want to chat, don't hesitate to get in touch!<button class="info-btn info-btn-inactive" type="button">show less</button>
+                </p>
+            </div>
+        </section>
+        <section class="platforms">
+            <h3>Platforms</h3>
+            <div class="container-platforms">
+                <div>
+                    <h6><i class="fa-regular fa-envelope"></i> Email</h6>
+                    <span>reinaldojcg1@gmail.com</span>
                 </div>
-            </section>
-            <section class="platforms">
-                <h3>Platforms</h3>
-                <div class="container-platforms">
-                    <div>
-                        <h6><i class="fa-regular fa-envelope"></i> Email</h6>
-                        <span>reinaldojcg1@gmail.com</span>
-                    </div>
-                    <div>
-                        <h6><i class="fa-brands fa-twitter"></i> Twitter</h6>
-                        <span>https://twitter.com/reinaldojcg1</span>
-                    </div>
-                    <div>
-                        <h6><i class="fa-brands fa-github"></i> GitHub</h6>
-                        <span>https://github.com/sazukeR/sazukeR</span>
-                    </div>
-                    <div>
-                        <h6><i class="fa-brands fa-linkedin"></i> LinkedIn</h6>
-                        <span>https://www.linkedin.com/in/reinaldo-jesus-contreras-4394041a2/</span>
-                    </div>
-                    <div>
-                        <h6><i class="fa-brands fa-codepen"></i> CodePen</h6>
-                        <span>https://codepen.io/reinaldojcg1</span>
-                    </div>
+                <div>
+                    <h6><i class="fa-brands fa-twitter"></i> Twitter</h6>
+                    <span>https://twitter.com/reinaldojcg1</span>
                 </div>
-            </section>
-            <section class="projects">
+                <div>
+                    <h6><i class="fa-brands fa-github"></i> GitHub</h6>
+                    <span>https://github.com/sazukeR/sazukeR</span>
+                </div>
+                <div>
+                    <h6><i class="fa-brands fa-linkedin"></i> LinkedIn</h6>
+                    <span>https://www.linkedin.com/in/reinaldo-jesus-contreras-4394041a2/</span>
+                </div>
+                <div>
+                    <h6><i class="fa-brands fa-codepen"></i> CodePen</h6>
+                    <span>https://codepen.io/reinaldojcg1</span>
+                </div>
+            </div>
+        </section>
+        <section class="projects">
                 <h3>Projects</h3>
                 <div class="container-projects">
                     <a href="#code-1">
@@ -123,79 +124,79 @@
                         </figure>
                     </a>
                 </div>
-            </section>
-            <article class="modal" id="code-1">
-                <div class="modal-content">
-                    <a href="#close" class="modal-close">
-                        <i class="fa-solid fa-circle-xmark"></i>
-                    </a>
-                    <article class="portfolio-modal">
-                        <img src="assets/code1.jpg" alt="code1">
-                        <div class="portfolio-info">
-                            <h4>NOMBRE DEL PROYECTO 1</h4>
-                            <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam esse dicta sunt doloribus voluptas magni, culpa iste cum quo. Consequatur.</P>
-                            <aside class="portfolio-details">
-                                <small><b>CLIENTE</b></small>
-                                <small>nombre del cliente</small>
-                                <small><b>FECHA</b></small>
-                                <small>28-11-91</small>
-                                <small><b>TIPO</b></small>
-                                <small>tipo de proyecto</small>
-                                <small><b>ENLACE</b></small>
-                                <small><a href="https//proyecto.com" target="_blank" rel="noopener">http//fsdfdfsdfsdfsdf.com</a></small>
-                            </aside>
-                        </div>
-                    </article>
-                </div>
-            </article>
-            <article class="modal" id="code-2">
-                <div class="modal-content">
-                    <a href="#close" class="modal-close">
-                        <i class="fa-solid fa-circle-xmark"></i>
-                    </a>
-                    <article class="portfolio-modal">
-                        <img src="assets/code2.jpg" alt="code2">
-                        <div class="portfolio-info">
-                            <h4>NOMBRE DEL PROYECTO 2</h4>
-                            <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam esse dicta sunt doloribus voluptas magni, culpa iste cum quo. Consequatur.</P>
-                            <aside class="portfolio-details">
-                                <small><b>CLIENTE</b></small>
-                                <small>nombre del cliente</small>
-                                <small><b>FECHA</b></small>
-                                <small>28-11-91</small>
-                                <small><b>TIPO</b></small>
-                                <small>tipo de proyecto</small>
-                                <small><b>ENLACE</b></small>
-                                <small><a href="https//proyecto.com" target="_blank" rel="noopener">http//fsdfdfsdfsdfsdf.com</a></small>
-                            </aside>
-                        </div>
-                    </article>
-                </div>
-            </article>
-            <article class="modal" id="code-3">
-                <div class="modal-content">
-                    <a href="#close" class="modal-close">
-                        <i class="fa-solid fa-circle-xmark"></i>
-                    </a>
-                    <article class="portfolio-modal">
-                        <img src="assets/code3.jpg" alt="code3">
-                        <div class="portfolio-info">
-                            <h4>NOMBRE DEL PROYECTO 3</h4>
-                            <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam esse dicta sunt doloribus voluptas magni, culpa iste cum quo. Consequatur.</P>
-                            <aside class="portfolio-details">
-                                <small><b>CLIENTE</b></small>
-                                <small>nombre del cliente</small>
-                                <small><b>FECHA</b></small>
-                                <small>28-11-91</small>
-                                <small><b>TIPO</b></small>
-                                <small>tipo de proyecto</small>
-                                <small><b>ENLACE</b></small>
-                                <small><a href="htt ps//proyecto.com" target="_blank" rel="noopener">http//fsdfdfsdfsdfsdf.com</a></small>
-                            </aside>
-                        </div>
-                    </article>
-                </div>
-            </article>
-        </main>
+        </section>
+        <article class="modal" id="code-1">
+            <div class="modal-content">
+                <a href="#close" class="modal-close">
+                    <i class="fa-solid fa-circle-xmark"></i>
+                </a>
+                <article class="portfolio-modal">
+                    <img src="assets/code1.jpg" alt="code1">
+                    <div class="portfolio-info">
+                        <h4>NOMBRE DEL PROYECTO 1</h4>
+                        <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam esse dicta sunt doloribus voluptas magni, culpa iste cum quo. Consequatur.</P>
+                        <aside class="portfolio-details">
+                            <small><b>CLIENTE</b></small>
+                            <small>nombre del cliente</small>
+                            <small><b>FECHA</b></small>
+                            <small>28-11-91</small>
+                            <small><b>TIPO</b></small>
+                            <small>tipo de proyecto</small>
+                            <small><b>ENLACE</b></small>
+                            <small><a href="https//proyecto.com" target="_blank" rel="noopener">http//fsdfdfsdfsdfsdf.com</a></small>
+                        </aside>
+                    </div>
+                </article>
+            </div>
+        </article>
+        <article class="modal" id="code-2">
+            <div class="modal-content">
+                <a href="#close" class="modal-close">
+                    <i class="fa-solid fa-circle-xmark"></i>
+                </a>
+                <article class="portfolio-modal">
+                    <img src="assets/code2.jpg" alt="code2">
+                    <div class="portfolio-info">
+                        <h4>NOMBRE DEL PROYECTO 2</h4>
+                        <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam esse dicta sunt doloribus voluptas magni, culpa iste cum quo. Consequatur.</P>
+                        <aside class="portfolio-details">
+                            <small><b>CLIENTE</b></small>
+                            <small>nombre del cliente</small>
+                            <small><b>FECHA</b></small>
+                            <small>28-11-91</small>
+                            <small><b>TIPO</b></small>
+                            <small>tipo de proyecto</small>
+                            <small><b>ENLACE</b></small>
+                            <small><a href="https//proyecto.com" target="_blank" rel="noopener">http//fsdfdfsdfsdfsdf.com</a></small>
+                        </aside>
+                    </div>
+                </article>
+            </div>
+        </article>
+        <article class="modal" id="code-3">
+            <div class="modal-content">
+                <a href="#close" class="modal-close">
+                    <i class="fa-solid fa-circle-xmark"></i>
+                </a>
+                <article class="portfolio-modal">
+                    <img src="assets/code3.jpg" alt="code3">
+                    <div class="portfolio-info">
+                        <h4>NOMBRE DEL PROYECTO 3</h4>
+                        <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam esse dicta sunt doloribus voluptas magni, culpa iste cum quo. Consequatur.</P>
+                        <aside class="portfolio-details">
+                            <small><b>CLIENTE</b></small>
+                            <small>nombre del cliente</small>
+                            <small><b>FECHA</b></small>
+                            <small>28-11-91</small>
+                            <small><b>TIPO</b></small>
+                            <small>tipo de proyecto</small>
+                            <small><b>ENLACE</b></small>
+                            <small><a href="htt ps//proyecto.com" target="_blank" rel="noopener">http//fsdfdfsdfsdfsdf.com</a></small>
+                        </aside>
+                    </div>
+                </article>
+            </div>
+        </article>
+    </main>
 </body>
 </html>
