--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <h1 class="name-h1">Reinaldo Contreras</h1>
                 <h1 class="hello-h1">Hello, I am a Frontend Developer</h1>
                 <p>I’m a passionate web developer with 3 years of experience in creating attractive and high-performance web solutions in a responsible and efficient manner, with the goal of providing a unique and satisfying user experience. </p>
-                <button>Let’s talk with me</button>
+                <button type="button">Let’s talk with me</button>
             </div>
             <div class="avatar">
                 <img src="assets/avatar-nobg.png" alt="avatar">
